Fixed code block text overflow issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -61,6 +61,7 @@ header h1 {
 
 p, div.code, code {
 	font-size: 16px;
+	text-wrap: wrap;
 }
 div.code, code {
 	max-width: calc(100vw - var(--padding)* 7 - 20rem);
